--- a/EmployeeReview.API/EmployeeReview.Infrastructure/EmployeeReview.Infrastructure.csproj
+++ b/EmployeeReview.API/EmployeeReview.Infrastructure/EmployeeReview.Infrastructure.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Migrations\20190328183441_Role.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.2.3" />
   </ItemGroup>
 
