--- a/employeereview.web/package.json
+++ b/employeereview.web/package.json
@@ -10,6 +10,7 @@
     "lodash": "^4.17.11",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
+    "react-inputs-validation": "^2.2.0",
     "react-redux": "^6.0.1",
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8",
