--- a/EmployeeReview.API/EmployeeReview.Domain/EmployeeReview.Domain.csproj
+++ b/EmployeeReview.API/EmployeeReview.Domain/EmployeeReview.Domain.csproj
@@ -22,6 +22,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Reviews\Repositories\" />
+    <Folder Include="Reviews\Services\" />
     <Folder Include="Security\Repositories\" />
   </ItemGroup>
 
