--- a/employeereview.web/package.json
+++ b/employeereview.web/package.json
@@ -8,12 +8,15 @@
     "@fortawesome/react-fontawesome": "^0.1.4",
     "axios": "^0.18.0",
     "bootstrap": "^4.3.1",
+    "font-awesome": "^4.7.0",
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^2.2.0",
     "lodash": "^4.17.11",
     "react": "^16.8.4",
+    "react-bootstrap": "^1.0.0-beta.8",
     "react-dom": "^16.8.4",
     "react-inputs-validation": "^2.2.0",
+    "react-rating": "^1.7.2",
     "react-redux": "^6.0.1",
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8",
